<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context=".contents.TypeSection">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_activity_type_section_header"
            style="@style/TextViewActivityHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_movies_all_text_quotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="64dp"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/tv_activity_type_section_header">

            <ImageView
                android:id="@+id/iv_all_text_quotes"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/content_description_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_all_quotes" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_all_text_quotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/all_quotes"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/cv_movies_all_text_quotes"
            app:layout_constraintStart_toStartOf="@+id/cv_movies_all_text_quotes"
            app:layout_constraintTop_toBottomOf="@+id/cv_movies_all_text_quotes" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/banner_type_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_banner_id"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/tv_all_text_quotes" />


        <include
            android:id="@+id/include_type_section_recently_added"
            layout="@layout/merge_recyclerview_with_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner_type_section" />


        <include
            android:id="@+id/include_type_section_popular_quotes"
            layout="@layout/merge_recyclerview_with_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_type_section_recently_added" />

        <include
            android:id="@+id/include_type_section_explore_list"
            layout="@layout/merge_recyclerview_with_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_type_section_popular_quotes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>