<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_quote_highlight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/tv_header_quote_highlight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/quote_highlight_header"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_quote_highlight_quote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/loading"
        android:textColor="@color/colorText"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_quote_highlight" />

    <ImageView
        android:id="@+id/iv_quote_highlight_from"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/content_description_icon"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_quote_highlight_quote"
        app:srcCompat="@drawable/ic_movie" />

    <TextView
        android:id="@+id/tv_quote_highlight_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/loading"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_quote_highlight_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_quote_highlight_from"
        app:layout_constraintTop_toTopOf="@+id/iv_quote_highlight_from" />

    <ImageView
        android:id="@+id/iv_quote_highlight_like"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/content_description_icon"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/iv_quote_highlight_from"
        app:srcCompat="@drawable/ic_fav_filled" />

    <TextView
        android:id="@+id/tv_quote_highlight_like"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="62dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/loading"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_quote_highlight_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_quote_highlight_like"
        app:layout_constraintTop_toTopOf="@+id/iv_quote_highlight_like" />


    <TextView
        android:id="@+id/tv_quote_highlight_tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:padding="4dp"
        android:text="@string/loading"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/iv_quote_highlight_like" />

</androidx.constraintlayout.widget.ConstraintLayout>